- added themes, but disabled it because the theme is not working right now - changed the order of tools, crosstable at the beginning with no more transition animation, user tv history which is slow goes at the end - added 'button' mode for friends list, fixed a lot of bugs, menu mode goes to button when the width of the screen goes too small - fixed incognito save mode error when user not logged in - fixed issue with flags being generated for menu and button - fixed issue with game link and bookmark for TV games were not separable - fixed user TV history to not remove and recreate stuff if already there - fixed issue with info icons out of screen for small resolution https://github.com/Siderite/lichessTools/issues/74 https://github.com/Siderite/lichessTools/issues/73 https://github.com/Siderite/lichessTools/issues/72 https://github.com/Siderite/lichessTools/issues/71 https://github.com/Siderite/lichessTools/issues/68

--- a/tools/hideCrosstable/tool.css
+++ b/tools/hideCrosstable/tool.css
@@ -9,7 +9,6 @@ body.lichessTools.lichessTools-hideCrosstableEnabled main.round div.crosstable {
 }
 
 body.lichessTools.lichessTools-showCrosstable main.round div.crosstable {
-  transition: all 0.5s linear;
   filter: none;
 }
 
